--- a/settings.html
+++ b/settings.html
@@ -1,61 +1,65 @@
-<div class="fix-setvar-settings">
-    <div class="inline-drawer">
-        <div class="inline-drawer-toggle inline-drawer-header">
-            <b>Fix Setvar Macro</b>
-            <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
-        </div>
-        <div class="inline-drawer-content">
-            <div class="fix-setvar-content">
-                <div class="fix-setvar-description">
-                    <p>自动修复 SillyTavern staging 分支中 <code>setvar</code> 系列宏的管道符 <code>|</code> 解析问题。</p>
-                    <p>支持的宏：<code>setvar</code>, <code>setglobalvar</code>, <code>addvar</code>, <code>addglobalvar</code></p>
-                </div>
-
-                <div class="fix-setvar-option">
-                    <label class="checkbox_label" for="fix_setvar_enabled">
-                        <input type="checkbox" id="fix_setvar_enabled" name="fix_setvar_enabled" />
-                        <span>启用自动修复</span>
-                    </label>
-                    <div class="fix-setvar-hint">
-                        启用后，扩展会在生成、接收、编辑消息时自动转义宏中的管道符 <code>|</code> 为 <code>\|</code>
-                    </div>
-                </div>
-
-                <div class="fix-setvar-option">
-                    <label class="checkbox_label" for="fix_setvar_debug">
-                        <input type="checkbox" id="fix_setvar_debug" name="fix_setvar_debug" />
-                        <span>启用调试日志</span>
-                    </label>
-                    <div class="fix-setvar-hint">
-                        启用后，会在浏览器控制台输出详细的调试信息（过滤关键词：<code>FSM:DEBUG</code>）
-                    </div>
-                </div>
-
-                <div class="fix-setvar-info">
-                    <h4>工作原理</h4>
-                    <ul>
-                        <li>监听多个事件（生成开始、消息接收、消息编辑、聊天切换）</li>
-                        <li>遍历所有聊天消息（包括 swipes）</li>
-                        <li>使用正则表达式查找目标宏</li>
-                        <li>将未转义的 <code>|</code> 替换为 <code>\|</code></li>
-                        <li>更新消息内容</li>
-                    </ul>
-                </div>
-
-                <div class="fix-setvar-example">
-                    <h4>示例</h4>
-                    <div class="fix-setvar-code">
-                        <div class="fix-setvar-before">
-                            <strong>修复前：</strong>
-                            <code>{{setvar::name::|value|}}</code>
-                        </div>
-                        <div class="fix-setvar-after">
-                            <strong>修复后：</strong>
-                            <code>{{setvar::name::\|value\|}}</code>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="fix-setvar-macro-settings">
+  <div class="inline-drawer">
+    <div class="inline-drawer-toggle inline-drawer-header">
+      <b>Fix Setvar Macro</b>
+      <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
     </div>
+    <div class="inline-drawer-content">
+      <div class="flex-container flexFlowColumn">
+        <label class="checkbox_label" for="fix_setvar_enabled">
+          <input id="fix_setvar_enabled" type="checkbox" class="checkbox" />
+          <span>启用自动修复</span>
+          <i
+            class="fa-solid fa-info-circle"
+            title="自动转义 setvar 宏中的管道符 | 字符，防止被误识别为过滤器分隔符"
+          ></i>
+        </label>
+
+        <div class="fix-setvar-macro-debug-section">
+          <div class="debug-header">
+            <i class="fa-solid fa-bug"></i>
+            <span>调试模式</span>
+          </div>
+          <label class="checkbox_label" for="fix_setvar_debug">
+            <input id="fix_setvar_debug" type="checkbox" class="checkbox" />
+            <span>启用详细日志</span>
+            <i
+              class="fa-solid fa-info-circle"
+              title="在控制台输出详细的调试信息，包括每次修复的具体内容、正则匹配结果、事件触发时机等"
+            ></i>
+          </label>
+          <div class="debug-info">
+            <small><b>调试信息包括：</b></small>
+            <ul style="margin: 5px 0; padding-left: 20px">
+              <li>事件触发时机和来源</li>
+              <li>每条消息的处理详情</li>
+              <li>正则表达式匹配结果</li>
+              <li>修复前后的文本对比</li>
+              <li>性能统计（处理时间）</li>
+            </ul>
+            <small><b>控制台筛选：</b></small>
+            <div class="debug-filter-hint">🔍 FSM:DEBUG</div>
+          </div>
+        </div>
+
+        <div class="margin-top-10px">
+          <small><b>说明：</b></small>
+          <small
+            >此扩展会自动将 <code>\{{setvar::name::|value|}}</code> 转换为 <code>\{{setvar::name::\|value\|}}</code>，解决
+            SillyTavern staging 分支中管道符被错误解析的问题。</small
+          >
+        </div>
+
+        <div class="margin-top-10px">
+          <small><b>支持的宏：</b></small>
+          <ul style="margin: 5px 0; padding-left: 20px">
+            <li><code>\{{setvar::...}}</code></li>
+            <li><code>\{{setglobalvar::...}}</code></li>
+            <li><code>\{{addvar::...}}</code></li>
+            <li><code>\{{addglobalvar::...}}</code></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
