feat: add prompt manager auto-fix support and cleanup docs
- Add MutationObserver to detect prompt edit forms
- Auto-fix pipes on textarea blur event
- Support all prompt types (Main, NSFW, Jailbreak, etc.)
- Remove redundant documentation files
- Keep only essential README.md

--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,9 @@
   <div class="inline-drawer">
     <div class="inline-drawer-toggle inline-drawer-header">
       <b>Fix Setvar Macro</b>
-      <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
+      <div
+        class="inline-drawer-icon fa-solid fa-circle-chevron-down down"
+      ></div>
     </div>
     <div class="inline-drawer-content">
       <div class="flex-container flexFlowColumn">
@@ -45,8 +47,9 @@
         <div class="margin-top-10px">
           <small><b>说明：</b></small>
           <small
-            >此扩展会自动将 <code>\{{setvar::name::|value|}}</code> 转换为 <code>\{{setvar::name::\|value\|}}</code>，解决
-            SillyTavern staging 分支中管道符被错误解析的问题。</small
+            >此扩展会自动将 <code>\{{setvar::name::|value|}}</code> 转换为
+            <code>\{{setvar::name::\|value\|}}</code>，解决 SillyTavern staging
+            分支中管道符被错误解析的问题。</small
           >
         </div>
 
